[package]
name    = "api"
version = "0.1.0"
authors = ["Ty Cobb <ty.cobb.m@gmail.com>"]

[dependencies]
dotenv       = "0.10.1"
rocket       = "0.4.0-rc.1"
serde        = "1.0"
serde_derive = "1.0"

[dependencies.diesel]
version  = "1.3.3"
features = ["postgres"]

[dependencies.rocket_contrib]
version  = "0.4.0-rc.1"
features = ["json"]
default-features = false
