[package]
name    = "api"
version = "0.1.0"
authors = ["Ty Cobb <ty.cobb.m@gmail.com>"]

[dependencies]
dotenv          = "0.10"
juniper         = "0.10"
juniper_codegen = "0.10"
juniper_rocket  = "0.1"
rocket          = "0.3"
rocket_codegen  = "0.3"
serde           = "1.0"
serde_derive    = "1.0"

[dependencies.diesel]
version  = "1.3.3"
features = ["postgres"]

[dependencies.rocket_contrib]
version  = "0.3.9"
features = ["json"]
default-features = false
